--- a/srcs/auto_index_off.conf
+++ b/srcs/auto_index_off.conf
@@ -13,7 +13,7 @@ server {
 	index index.php;
 
 	location / {
-		autoindex on;
+		autoindex off;
 		try_files $uri $uri/ = 404;
 	}
 
@@ -22,4 +22,3 @@ server {
 		fastcgi_pass unix:/var/run/php/php7.3-fpm.sock;
 	}
 }
-
