--- a/srcs/auto_index_off.conf
+++ b/srcs/auto_index_off.conf
@@ -4,7 +4,9 @@ server {
 
 	root /var/www/html;
 	server_name localhost;
+}
 
+server {
 	listen 443 ssl ;
 	listen [::]:443 ssl ;
 	ssl_certificate /etc/nginx/ssl/localhost.pem;
