--- a/srcs/auto_index_off.conf
+++ b/srcs/auto_index_off.conf
@@ -1,26 +1,32 @@
 server {
-	listen 80;
-	listen [::]:80;
+    listen 80;
+    listen [::]:80;
 
-	root /var/www/html;
-	server_name localhost;
+    server_name localhost;
+    root /var/www/html;
+    return 301 https://$server_name$request_uri;
 }
 
 server {
-	listen 443 ssl ;
-	listen [::]:443 ssl ;
-	ssl_certificate /etc/nginx/ssl/localhost.pem;
-	ssl_certificate_key /etc/nginx/ssl/localhostkey.key;
+	listen 443;
+	listen [::]:443;
 
-	index index.php;
+    ssl on;
 
-	location / {
-		autoindex off;
-		try_files $uri $uri/ = 404;
-	}
+    ssl_certificate /etc/ssl/certs/localhost.pem;
+	ssl_certificate_key /etc/ssl/certs/localhost-key.pem;
 
-	location ~ \.php$ {
-		include snippets/fastcgi-php.conf;
-		fastcgi_pass unix:/var/run/php/php7.3-fpm.sock;
-	}
+	root /var/www/html;
+    index index.html index.php;
+
+	server_name localhost;
+    location / {
+    	autoindex off;
+        try_files $uri $uri/ =404;
+    }
+
+    location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass unix:/var/run/php/php7.3-fpm.sock;
+     }
 }
