--- a/srcs/nginx.conf
+++ b/srcs/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name localhost www.localhost;
-    root /var/www/;
+    server_name localhost;
+    root /var/www/html;
     return 301 https://$server_name$request_uri;
 }
 
@@ -13,13 +13,11 @@ server {
 
     ssl on;
 
-    #ssl_certificate /etc/nginx/ssl/localhost.pem;
-	#ssl_certificate_key /etc/nginx/ssl/localhost-key.pem;
     ssl_certificate /etc/ssl/certs/localhost.pem;
 	ssl_certificate_key /etc/ssl/certs/localhost-key.pem;
 
-	root /var/www/;
-    index index.html index.htm index.php;
+	root /var/www/html;
+    index index.html index.php;
 
 	server_name localhost;
     location / {
